spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -268,7 +268,6 @@ display: flex;}
 .footer-contact {padding-top: 10px;}
 
 .footer-contact img {
-    height: auto;
     width: 20px;
     padding-left: 5px;
     
